# pyVoIP

./: .gitignore  pyproject.toml
.github/workflows/: black.yml  flake8.yml
docs/: Examples.rst  Globals.rst  SIP.rst  VoIP.rst  conf.py
pyVoIP/: VoIP.py  __init__.py
pyVoIP/lib/: credentials.py
pyVoIP/proto/: RTP.py
pyVoIP/proto/SIP/: __init__.py  client.py  message.py
pyVoIP/sock/: sock.py
pyvoip/: __init__.py  voip.py
pyvoip/lib/: credentials.py  exceptions.py  helpers.py  models.py  pyvoip_types.py  regex.py
pyvoip/proto/: RTP.py
pyvoip/proto/SIP/: __init__.py  client.py  message.py
pyvoip/sock/: sock.py  transport.py
pyvoip/templates/: body.py  sdp.py  sip.py
tests/: test_sip.py
