[tool.poetry]
name = "pyvoip"
version = "0.1.0"
description = ""
authors = ["Jan Rozhon <jan.rozhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^0.991"
isort = "^5.12.0"
pyright = "^1.1.292"
flake8 = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
