[tool.poetry]
name = "pyVoIP"
version = "0.1.4"
description = "Python based VoIP library"
authors = ["Jan Rozhon <jan.rozhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
rich = "^13.3.1"
pydantic = "^1.10.4"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"
isort = "^5.12.0"
pyright = "^1.1.292"
flake8 = "^6.0.0"
ipython = "^8.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."pyvoip/__init__.py"]

